Finished font integration with fontsquirrel and added default quote behavior on load of app

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 connection-prod.php
 
 # Folders to ignore
-bower_components
-node_modules
-bootstrap
-misc-media
+/bower_components
+/node_modules
+/bootstrap
+/workspace
